--- a/src/style.css
+++ b/src/style.css
@@ -110,7 +110,6 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0 auto;
     color: white;
-    /* Set text color to white within the modal */
 }
 
 .close {
@@ -123,7 +122,6 @@ body {
     background-color: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
     color: #fff;
-    /* Set the color of the button text to white */
     font-size: 20px;
     font-weight: bold;
     transition: 0.6s all;
@@ -156,7 +154,6 @@ body {
     display: none;
 }
 
-/* Only display the joystick on screens smaller than 1024 pixels wide */
 @media (max-width: 1600px) {
     #joystick-container {
         display: block;
@@ -166,12 +163,12 @@ body {
 #instruction {
     display: none;
     position: fixed;
-    top: 20%; /* Adjust as needed */
+    top: 20%; 
     left: 50%;
     transform: translateX(-50%);
     width: 80%;
     text-align: center;
-    font-size: 24px; /* Larger font size */
+    font-size: 24px; 
     background: rgba(0, 0, 0, 0.8);
     color: white;
     padding: 20px;
@@ -180,7 +177,6 @@ body {
     transition: opacity 1s ease-in-out;
 }
 
-/* Optionally, responsive font size for very large screens */
 @media (min-width: 1024px) {
     #instruction {
         font-size: 32px;
