--- a/src/style.css
+++ b/src/style.css
@@ -110,6 +110,7 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0 auto;
     color: white;
+    /* Set text color to white within the modal */
 }
 
 .close {
@@ -122,6 +123,7 @@ body {
     background-color: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
     color: #fff;
+    /* Set the color of the button text to white */
     font-size: 20px;
     font-weight: bold;
     transition: 0.6s all;
@@ -154,7 +156,8 @@ body {
     display: none;
 }
 
-@media (max-width: 1600px) {
+/* Only display the joystick on screens smaller than 1024 pixels wide */
+@media (max-width: 1200px) {
     #joystick-container {
         display: block;
     }
@@ -163,12 +166,12 @@ body {
 #instruction {
     display: none;
     position: fixed;
-    top: 20%; 
+    top: 20%; /* Adjust as needed */
     left: 50%;
     transform: translateX(-50%);
     width: 80%;
     text-align: center;
-    font-size: 24px; 
+    font-size: 24px; /* Larger font size */
     background: rgba(0, 0, 0, 0.8);
     color: white;
     padding: 20px;
@@ -177,8 +180,73 @@ body {
     transition: opacity 1s ease-in-out;
 }
 
+/* Optionally, responsive font size for very large screens */
 @media (min-width: 1024px) {
     #instruction {
         font-size: 32px;
     }
+}
+
+.spinner {
+    width: 22px;
+    height: 22px;
+    animation: spinner-y0fdc1 2s infinite ease;
+    transform-style: preserve-3d;
+    position: absolute;
+    left: calc(50% - 160px);
+    top: 50%;
+}
+
+    .spinner > div {
+        background-color: rgba(71, 16, 232, 0.8);
+        height: 100%;
+        position: absolute;
+        width: 100%;
+        border: 1px solid #004dff;
+    }
+
+    .spinner div:nth-of-type(1) {
+        transform: translateZ(-11px) rotateY(180deg);
+    }
+
+    .spinner div:nth-of-type(2) {
+        transform: rotateY(-270deg) translateX(50%);
+        transform-origin: top right;
+    }
+
+    .spinner div:nth-of-type(3) {
+        transform: rotateY(270deg) translateX(-50%);
+        transform-origin: center left;
+    }
+
+    .spinner div:nth-of-type(4) {
+        transform: rotateX(90deg) translateY(-50%);
+        transform-origin: top center;
+    }
+
+    .spinner div:nth-of-type(5) {
+        transform: rotateX(-90deg) translateY(50%);
+        transform-origin: bottom center;
+    }
+
+    .spinner div:nth-of-type(6) {
+        transform: translateZ(11px);
+    }
+
+@keyframes spinner-y0fdc1 {
+    0% {
+        transform: rotate(45deg) rotateX(-25deg) rotateY(25deg);
+    }
+
+    50% {
+        transform: rotate(45deg) rotateX(-385deg) rotateY(25deg);
+    }
+
+    100% {
+        transform: rotate(45deg) rotateX(-385deg) rotateY(385deg);
+    }
+}
+
+.spinner.fade {
+    opacity: 0;
 }
